# atoo

./: .pdd  .travis.yml  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
atoo/: build.gradle
atoo/src/main/: AndroidManifest.xml
atoo/src/main/assets/: Point.frag  Point.vert
catoo/: build.gradle
catoo/src/main/: AndroidManifest.xml
freetype2/: CMakeLists.txt  build.gradle
freetype2/jni/: Android.mk  Application.mk
freetype2/src/androidTest/: AndroidManifest.xml
freetype2/src/androidTest/java/com/nikialeksey/freetype2/: SampleTest.java
freetype2/src/main/cpp/: face.cpp  freetype2.cpp  freetype2errors.h  glyph.cpp
freetype2/src/main/cpp/commons/: errors.cpp  errors.h  freetype2errors.cpp  freetype2errors.h
freetype2/src/main/java/com/nikialeksey/freetype2/: Face.java  Freetype2.java  NativeFace.java  NativeFreetype2.java
freetype2/src/main/java/com/nikialeksey/freetype2/exceptions/: Freetype2Exception.java  Initialize.java  Release.java
freetype2/src/main/java/com/nikialeksey/freetype2/face/: Face.java  NativeFace.java
freetype2/src/main/java/com/nikialeksey/freetype2/face/exceptions/: Initialize.java  Release.java
freetype2/src/main/java/com/nikialeksey/freetype2/glyph/: Bitmap.java  Glyph.java  NativeGlyph.java
freetype2/src/main/java/com/nikialeksey/jni/: Pointer.java  Releasable.java
gradle/wrapper/: gradle-wrapper.properties
(+84 files in other folders)
